--- a/sorting_algorithms/templates/sorting/sort_data.html
+++ b/sorting_algorithms/templates/sorting/sort_data.html
@@ -11,6 +11,6 @@
   </div>
 </div>
 {% endfor %}
-  <a href="{% url 'sort_nums' %}" class="btn btn-primary" style="margin-top: 30px;">Добавить</a>
+  <a href="{% url 'sort_nums' %}" class="btn btn-primary" style="margin-top: 30px; margin-bottom: 30px;">Добавить</a>
 </div>
 {% endblock %}
